2009-08-18  Eric Blake  <ebb9@byu.net>

	* libc/posix/popen.c (popen): Fix documented prototype.

	Improve popen compatibility with glibc.
	* libc/posix/popen.c (popen): The 2006-08-22 change to use
	FD_CLOEXEC disagrees with other implementations; instead, use
	pidlist to work even when fcntl is not available.  Meanwhile,
	support the 'e' modifier to set CLOEXEC, as in glibc.  Drop
	cygwin-specific code, now that cygwin has its own version.
	* libc/posix/Makefile.am (CHEWOUT_FILES): Document popen.
	* libc/posix/posix.tex: New file.

2009-08-17  Craig Howland <howland@LGSInnovations.com>

	* libc/string/wcsncpy.c (wcsncpy):  Re-write function based on small
	version of strncpy() (fixing two bugs).

2009-08-13  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdio/mktemp.c (mkdtemp): Fix typo in function name.

2009-08-12  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/mktemp.c (_gettemp): Do not call _mkdir_r unless
	HAVE_MKDIR is defined.

2009-08-12  Hans-Peter Nilsson  <hp@axis.com>

	* libc/include/reent.h: Add prototype and definition of _mkdir_r.
	* libc/reent/Makefile.am (GENERAL_SOURCES): Add mkdirr.c.
	(CHEWOUT_FILES): Add mkdirr.def.
	* libc/reent/Makefile.in: Regenerate.
	* libc/reent/mkdirr.c: New file.

2009-08-10  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdlib/wcstombs.c: Change documentation to specify size_t
	return type instead of int.

2009-07-29  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdlib/a64l.c: Fix to use 'a' instead of 'A' in calculation
	when a lower-case character is detected.

2009-07-29  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/mbtowc_r.c (__utf8_mbtowc): Rework UTF-16 surrogate
	pair handling to be more bullet-proof even with incomplete UTF-8
	sequences.  Add check for 4 byte sequences resulting in values
	outside the valid Unicode range.  Add a comment to clarify checking
	for invalid CESU-8 sequences.

2009-07-28  Corinna Vinschen  <corinna@vinschen.de>
